--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Basic HTML Form</h2>
-    <form action="">
+    <form>
         <label for="name">Name :</label>
         <input type="text" placeholder="Enter your name"><br><br>
 
