--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
     <h2>Basic HTML Form</h2>
     <form>
-        <label for="name">Name :</label>
-        <input type="text" placeholder="Enter your name"><br><br>
+        <label for="name">First Name :</label>
+        <input type="text" placeholder="Enter first your name"><br><br>
+
+        <label for="name">Last Name :</label>
+        <input type="text" name="email" id="email" placeholder="Enter your last name"><br><br>
 
         <label for="email">Email :</label>
         <input type="text" name="email" id="email" placeholder="Enter your email"><br><br>
